# registry

./: .env  .gitignore  .rustfmt.toml  Cargo.toml
migrations/2021-06-11-063602_config/: up.sql
migrations/2021-06-11-064300_user/: up.sql
migrations/2021-06-11-071907_package/: up.sql
migrations/2021-06-11-171316_module_version/: down.sql  up.sql
migrations/2021-06-12-101547_module/: up.sql
src/: constants.rs  main.rs
src/database/: schema.rs
src/database/models/: mod.rs
src/database/models/config/: model.rs  util.rs
src/database/models/module/: model.rs  util.rs
src/database/models/module_version/: model.rs  util.rs
src/database/models/package/: model.rs  util.rs
src/database/models/user/: model.rs  util.rs
src/errors/: forbidden.rs  mod.rs  not_found.rs  registry_error.rs
src/routes/: home.rs  mod.rs  register.rs
static/templates/: error.html  home.html  register.html
