[package]
name = "registry"
version = "0.1.0"
authors = ["Udit Karode <udit.karode@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite"] }
actix-http = "2"
actix-web = "3"
handlebars = { version = "4.0.0", features = ["dir_source"] }
serde_json = "1.0"
dotenv = "0.15.0"